--- a/src/templates/partials/orderbook.html
+++ b/src/templates/partials/orderbook.html
@@ -42,6 +42,7 @@
                 {% elif order.user_id != user.id and market.status.value == 'OPEN' %}
                 <form hx-post="/orders/{{ order.id }}/aggress" hx-swap="none" style="display:inline;" class="aggress-form">
                     <input type="hidden" name="quantity" class="aggress-qty">
+                    <input type="hidden" name="fill_and_kill" class="aggress-fak" value="false">
                     <button type="submit" class="ladder-btn ladder-buy-btn" title="Buy this offer">
                         <span class="btn-spinner spinner" style="width:0.7em;height:0.7em;border-width:1px;"></span>
                         <span class="btn-text">Buy</span>
@@ -77,6 +78,7 @@
                 {% elif order.user_id != user.id and market.status.value == 'OPEN' %}
                 <form hx-post="/orders/{{ order.id }}/aggress" hx-swap="none" style="display:inline;" class="aggress-form">
                     <input type="hidden" name="quantity" class="aggress-qty">
+                    <input type="hidden" name="fill_and_kill" class="aggress-fak" value="false">
                     <button type="submit" class="ladder-btn ladder-sell-btn" title="Sell to this bid">
                         <span class="btn-spinner spinner" style="width:0.7em;height:0.7em;border-width:1px;"></span>
                         <span class="btn-text">Sell</span>
